--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -17,6 +17,11 @@
         margin: 0 auto;
     }
 
+    /*フォーム */
+
+    .sg-form {
+        width: 300px;
+    }
     /*quesiton.htmlのCSS*/
 
     /*quiz.htmkのCSS*/
