--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body{
 /*header*/
 .header {
     position:fixed;
-    position:relative;
     top:0;
     left:0;
     height:80px;
@@ -138,13 +137,22 @@ body{
     margin-top: 20px;
     background-color: greenyellow;
     border: 1px solid green;
+    font-family: "M PLUS 1p";
 }
 
 .sg-button:hover {
     background-color: #7da532;
 }
 
-
+.sg-formListItem {
+    width: 90%;
+    background-color: white;
+    font-family: "M PLUS 1p";
+    font-size: 18px;
+    border: 2px solid green;
+    margin: 20px;
+    padding: 20px 10px 0px;
+}
 /*question.htmlのCSS*/
 
 /*quiz.htmlのCSS*/
