--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -2,9 +2,13 @@
     /*全体的*/
 
     /*header*/
-
+.header{
+height: 48px;
+}
     /*mainvisual*/
-
+.mainvisual-img{
+    height: 400px;
+}
     /*link*/
 
     /*mypage*/
