--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,12 @@ body{
 /*header*/
 .header {
     position:fixed;
-    position:relative;
+    /* position:relative; */
     top:0;
     left:0;
     height:80px;
     width: 100%;
       background-color: white;
-      border-bottom: solid 1px var(--gray-light-color);
       padding: 0 24px;
       z-index: 10000;
       transition: background-color .3s linear;
@@ -28,17 +27,24 @@ body{
       align-items: center; 
       transition: background-color .4s linear;
       /* margin-left: 80px; */
-  
   }
-  .header-inner{
+
+  /* .header-room{
     display: flex;
+    
+  } */
+  .header-inner{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: flex-end;
   }
+
   
   .header-List{
     display: flex;
     list-style: none;
+    /* margin-left: 700px; */
   }
   
   .header-ListItem{
@@ -55,14 +61,95 @@ body{
 }
 
 /*mainvisual*/
-.container{
-  margin-top: 80px;
-}
 .mainvisual-img{
   background: url(../img/posse_main.jpg) center center/cover;
   height: 600px;
 }
 /*link*/
+.sugggest-explain{
+  margin-bottom: 100px;
+}
+
+.detail {
+  position: relative;
+}
+
+.detail p {
+  display: -webkit-box;
+  position: relative;
+  margin-bottom: 10px;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3; /* 開く前に見せたい行数を指定 */
+  text-align: center;
+}
+
+.detail:has(:checked) p {
+  display: block;
+}
+
+.detail p::after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(180deg, hsla(0, 0%, 100%, 0) 0, hsla(0, 0%, 100%, .9) 50%, hsla(0, 0%, 100%, .9) 0, #fff);
+  content: '';
+}
+
+.detail:has(:checked) p::after {
+  content: none;
+}
+
+.detail label {
+  display: flex;
+  align-items: center;
+  gap: 0 4px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: .4em 1.2em;
+  border-radius: 1px;
+  background-color: #2589d0;
+  color: #fff;
+  font-size: .7em;
+}
+
+.detail label:hover {
+  border:1px solid #2589d0;
+  background-color: #fff;
+  color: #2589d0;
+  cursor: pointer;
+}
+
+.detail:has(:checked) label {
+  display: none;
+}
+
+.detail label::after {
+  display: inline-block;
+  width: 10px;
+  height: 5px;
+  background-color: #fff;
+  clip-path: polygon(0 0, 100% 0, 50% 100%);
+  content: '';
+}
+
+.detail label:hover::after{
+  background-color: #2589d0;
+}
+
+.detail input {
+  display: none;
+}
+.suggest-explain-title{
+  padding-top: 50px;
+  text-align: center;
+  font-size: 30px;
+}
 
 /*mypage*/
 .img-box{
@@ -83,7 +170,16 @@ body{
   margin-top:22px;
 }
 /*footor*/
-
+.footer-copyright{
+  text-align: center;
+  margin-top: 24px;
+    border-top: solid 1px var(black);
+    /* color: var(--gray-color); */
+    letter-spacing: .1em;
+    line-height: 1.5;
+    font-size: 15px;
+    padding: 24px
+}
 /*suggest.htmlのCSS*/
 /*全体的*/
 
