--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -5,6 +5,14 @@
 .header{
 height: 48px;
 }
+.header-logo{
+    width: 200px;
+}
+
+.suggest-logo{
+    height: 35px;
+    width: 25px;
+}
     /*mainvisual*/
 .mainvisual-img{
     height: 400px;
