ヘッダー変更

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,10 @@ body{
   font-size: 30px;
 }
 
+.question-logo{
+  height: 30px;
+}
+
 /*mypage*/
 .img-box{
   display: flex;
@@ -176,6 +180,12 @@ body{
 }
 .check-list-box{
   display: flex;
+}
+.first{
+  opacity: 0.8;
+}
+.boxdiv{
+  color: #7da532;
 }
 /*footor*/
 .footer-copyright{
