suggest部分の編集を進め、見た目を中心に変化させました

--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -30,6 +30,7 @@ height: 48px;
     .suggest_title{
         grid-template-columns: 1fr;
         margin: 0 auto;
+        margin-top: 40px;
     }
 
     /*フォーム */
@@ -37,6 +38,11 @@ height: 48px;
     .sg-form {
         width: 300px;
     }
+
+    .sg-formListItem {
+        max-width: 500px;
+    }
+    
     /*quesiton.htmlのCSS*/
 
     /*quiz.htmkのCSS*/
