--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,7 @@ body{
     grid-template-columns: 1fr 1fr;
     text-align: center;
     background-color: #dcf8a9;
+    margin-top: 80px;
 }
 
 .suggest_title_img img{
@@ -216,20 +217,38 @@ body{
 
 /*フォーム*/
 .suggest_detailtext {
-    font-size:18px;
+    font-size:26px;
 }
 
+.sg-form-write-guide {
+    font-size: 17px;
+    color:green;
+}
 .sg-form-box{
     display:flex;
     flex-direction: column;
     align-items: center;
 }
+
+.sg-name{
+    height:50px;
+    width:300px;
+    font-family: "M PLUS 1p";
+    border: 2px solid green;
+    border-radius: 14px;
+}
+
+.sg-name:focus{
+    outline: #dcf8a9 4px solid;
+}
+
 .sg-form{
-    height:100px;
+    height:150px;
     width:600px;
     font-family: "M PLUS 1p";
     border: 2px solid green;
-    border-radius: 4px;
+    border-radius: 14px;
+    overflow-wrap: anywhere;
 }
 
 .sg-form:focus{
@@ -243,6 +262,7 @@ body{
     background-color: greenyellow;
     border: 1px solid green;
     font-family: "M PLUS 1p";
+    border-radius: 10px;
 }
 
 .sg-button:hover {
@@ -255,8 +275,22 @@ body{
     font-family: "M PLUS 1p";
     font-size: 18px;
     border: 2px solid green;
-    margin: 20px;
+    margin: 0 auto;
+    margin-top: 20px;
     padding: 20px 10px 0px;
+    max-width:960px;
+    border-radius: 7px;
+    box-shadow: 5px 5px 0px green;
+}
+
+.sg-formnd {
+    font-size: 16px;
+    color: #a8bd84;
+}
+
+.sg-formListDetail {
+    font-size: 20px;
+    color: rgb(51, 51, 51);
 }
 /*question.htmlのCSS*/
 
