--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,15 +58,21 @@ body{
 .suggest-text{
   margin-left: 15px;
 }
-
+.question-logo{
+  height: 30px;
+}
 /*mainvisual*/
 .mainvisual-img{
   background: url(../img/posse_main.jpg) center center/cover no-repeat;
   height: 600px;
 }
 /*link*/
+#link{
+  margin: 100px 0;
+}
 .explain{
-  margin-top: 100px;
+  /* margin-top: 100px; */
+  margin-bottom: 50px;
 }
 .explain-title{
   text-align: center;
@@ -75,6 +81,7 @@ body{
 
 .detail {
   position: relative;
+  margin-top: 40px;
 }
 
 .detail p {
@@ -118,15 +125,15 @@ body{
   transform: translateX(-50%);
   padding: .4em 1.2em;
   border-radius: 1px;
-  background-color: #2589d0;
+  background-color: #0c1382;
   color: #fff;
   font-size: .7em;
 }
 
 .detail label:hover {
-  border:1px solid #2589d0;
+  border:1px solid #0c1382;
   background-color: #fff;
-  color: #2589d0;
+  color: #0c1382;
   cursor: pointer;
 }
 
@@ -144,7 +151,7 @@ body{
 }
 
 .detail label:hover::after{
-  background-color: #2589d0;
+  background-color: #0c1382;
 }
 
 .detail input {
@@ -155,20 +162,34 @@ body{
   text-align: center;
   font-size: 30px;
 }
+
+/* スライダー */
 .splide__list{
   display: flex;
 }
+
+.splide__track{
+  height: 275px;
+}
 .suggest-itemImage img{
   width: 100%;
-  height: 100px;
+  height: 200px;
 }
 
 .suggest-item{
   list-style: none;
 }
 
-.question-logo{
-  height: 30px;
+.suggest-itemName{
+  font-size: 16px;
+  padding: 15px 0;
+  font-weight: bold;
+  letter-spacing: .05em;
+}
+
+.suggest-itemBody{
+  background-color: #0c1382;
+  color: #fff;
 }
 
 /*mypage*/
