--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -10,8 +10,12 @@ height: 48px;
 }
 
 .suggest-logo{
-    height: 35px;
-    width: 25px;
+    height: 40px;
+    width: 20px;
+}
+.question-img{
+    width: 30px;
+    height: 50px;
 }
     /*mainvisual*/
 .mainvisual-img{
