ヘッダーの高さ修正とボタン押したときクリアの字でる

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,14 @@ body{
 }
 
 /*mypage*/
+
+.detail-myPage{
+  padding-bottom:50px ;
+}
+
+.detail-text-my{
+  letter-spacing: .05em;
+}
 .img-box{
   display: flex;
   justify-content: center;
