トップページのボタンのところのレスポンシブを修正しましta！

--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -82,6 +82,21 @@ padding: 0px;
     width: 300px;
     margin: 0 auto;
 }
+
+.navList{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.button-room{
+    width: 300%;
+    border-right: 4px solid;
+    border-bottom: 2px solid;
+    border-left: 4px solid;
+}
     /*mypage*/
     .present-img{
         height:200px ;
