splideのCSS編集、これで最終更新の予定

--- a/assets/css/sp/style.css
+++ b/assets/css/sp/style.css
@@ -136,5 +136,9 @@ padding: 0px;
     .qt-formListItem {
         max-width: 500px;
     }
+
+    .qt-formnd{
+        font-size: 14px;
+    }
     /*quiz.htmkのCSS*/
 }
